--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bcad1591/react-date-picker": "^0.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
+    "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "rsuite": "^5.55.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
