--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^6.19.7",
+    "@mui/x-date-pickers-pro": "^6.19.7",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
@@ -27,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
