--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install --legacy-peer-deps && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "postinstall": "npm install --legacy-peer-deps"
@@ -34,9 +34,9 @@
     "react-router-dom": "^6.22.2",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
-    "redux": "^5.0.1",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0",
+    "redux-thunk": "^2.4.2",
     "rsuite": "^5.55.1"
   },
   "devDependencies": {
